force-app/main/default/objects/Journal__c/Journal__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpJournals</customHelpPage>
    <label>DD Journal</label>
    <nameField>
        <label>Journal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Journal</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>