force-app/main/default/objects/Journal__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Author</label>
    <type>Text</type>
</CustomField>