force-app/main/default/objects/Journal__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Journal Entry on Account</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>