force-app/main/default/objects/Journal__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>