force-app/main/default/objects/Journal__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipName>Internal_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>